# ShipStationPythonSDKv2

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
enums/: _common.py  batches.py  labels.py  shipments.py
models/: _common.py  batches.py  carriers.py  labels.py  package_pickups.py  package_types.py  rates.py  shipments.py  warehouses.py  webhooks.py
resources/: __init__.py  batches.py  fulfillments.py  package_pickups.py  shipments.py  tags.py  tracking.py  users.py  warehouses.py  webhooks.py
shipstation/: _api.py  client.py
shipstation/enums/: __init__.py
shipstation/models/: __init__.py  _common.py  carriers.py  manifests.py  tags.py  totes.py
shipstation/resources/: batches.py  carriers.py  downloads.py  fulfillments.py  inventory.py  labels.py  manifests.py  package_pickups.py  package_types.py  products.py  rates.py  shipments.py  tags.py  totes.py  tracking.py  users.py  warehouses.py  webhooks.py
tests/: conftest.py  test_client.py  test_integration.py
